# 3d

./: .clang-format  CMakeLists.txt  README.md
.claude/skills/code-review/: SKILL.md
hooks/: pre-push
include/: config.h  engine.h  mesh.h  utils.h  vec.h
src/: engine.c  main.c  mesh.c  utils.c  vec.c
